# matrix-room-import

./: .gitignore  README.md  example-config.yaml  pyproject.toml
matrix_migration/: __init__.py  appkeys.py  config.py  matrix_api.py  store.py  version.py
matrix_migration/appservice/: client.py  events.py  server.py  types.py
matrix_migration/cli/: bot.py  cli.py
matrix_migration/migrations/: __init__.py  create_tables.py  migrate.py
matrix_room_import/: __init__.py  appkeys.py  concurrency_events.py  config.py  db_migrations.py  export_file_model.py  matrix_api.py  store.py  stores.py  version.py
matrix_room_import/appservice/: client.py  server.py  types.py
matrix_room_import/cli/: bot.py
matrix_room_import/migrations/: create_tables.py  migrate.py
migrations/: 0_create_tables.sql  1_add_config_options_store.sql  2_add_userlist_in_rooms_to_remove.sql
