[tool.poetry]
name = "matrix-migration"
version = "0.1.0"
description = ""
authors = ["bdvil <benjam.devillers@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mautrix = "^0.20.4"
click = "^8.1.7"
pydantic = "^2.6.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mami = "matrix_migration.cli.cli:root"
